Revise delete event and swagger for event resource
